# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  formatCode.py  format_code.bat
Components/: CMakeLists.txt
Components/Common/: application.cpp  application.h  buffer.cpp  buffer.h  camera.cpp  camera.h  element_buffer.cpp  element_buffer.h  frame_buffer.cpp  frame_buffer.h  gmath.h  image.cpp  image.h  mesh.cpp  mesh.h  model.cpp  model.h  render_buffer.cpp  render_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  utils.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h  windows_system.cpp  windows_system.h
Components/Common/logger/: logger.cpp  logger.h
Demos/: CMakeLists.txt
Demos/Hello/: main.cpp
Demos/HelloEditor/: CMakeLists.txt  main.cpp  scene_data.xml
Demos/HelloEditor/data/: data_define.h  data_parser.h  object_data.h  xml_parser.cpp  xml_parser.h
Demos/HelloEditor/ui/: data_editor.cpp  data_editor.h  data_simulator.h  member_edit_ui.hpp  object_edit_ui.cpp  object_edit_ui.hpp
Demos/HelloEditor/util/: xml_parser_helper.cpp  xml_parser_helper.h
Demos/HelloImGui/: CMakeLists.txt  file_selector.hpp  main.cpp
Libraries/: CMakeLists.txt  imgui.cmake
Libraries/rttr-0.9.6-src/src/rttr/: variant.h
