cmake_minimum_required(VERSION 3.2)	
project(Libraries)

if(NOT TARGET imgui)
    include(imgui.cmake)
    set_target_properties(imgui PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
endif()

LIST(APPEND LibrariesSubDir "glad")
LIST(APPEND LibrariesSubDir "glfw")
LIST(APPEND LibrariesSubDir "glm")
LIST(APPEND LibrariesSubDir "assimp")

set(PROJECT_LIBRARIES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
foreach(dirname ${LibrariesSubDir}) 
	add_subdirectory(${dirname})
endforeach()

add_subdirectory("ImGuiFileDialog")
target_include_directories(ImGuiFileDialog PRIVATE
    $<TARGET_PROPERTY:imgui,INTERFACE_INCLUDE_DIRECTORIES>
    $<TARGET_PROPERTY:imgui,INCLUDE_DIRECTORIES>
)
set(tinyxml2_INSTALL_PKGCONFIG OFF CACHE BOOL "Disable pkg-config file generation")
add_subdirectory("tinyxml2-11.0.0")
add_subdirectory("pugixml-1.15")

set(BUILD_SHARED OFF CACHE BOOL "Disable tests" FORCE)
set(BUILD_TESTS OFF CACHE BOOL "Disable tests" FORCE)
set(BUILD_DRAFT_API OFF CACHE BOOL "Disable draft API" FORCE)
set(ENABLE_WS OFF CACHE BOOL "Disable WebSocket" FORCE)
set(ENABLE_CURVE OFF CACHE BOOL "Disable CURVE" FORCE)
set(BUILD_DOCS OFF CACHE BOOL "Disable docs" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "Disable examples" FORCE)
set(ENABLE_DRAFTS OFF CACHE BOOL "Disable drafts alias" FORCE)
set(WITH_DOC OFF CACHE BOOL "Disable Doc" FORCE)
set(BUILD_DOC OFF CACHE BOOL "Disable Doc" FORCE)
set(ENABLE_DOC OFF CACHE BOOL "Disable Doc" FORCE)

add_definitions(-DZMQ_BUILD_DRAFT=0)
set(ZMQ_ENABLE_DRAFT OFF CACHE BOOL "Disable draft API" FORCE)
set(ZMQ_BUILD_CLANG_FORMAT_TARGETS OFF CACHE BOOL "Disable clang-format targets" FORCE)

add_subdirectory("zeromq-4.3.5")

set(BUILD_RTTR_DYNAMIC OFF CACHE BOOL "Build the dynamic/shared version of RTTR library" FORCE)
set(BUILD_UNIT_TESTS OFF CACHE BOOL "Build the unit tests of RTTR")
set(BUILD_DOCUMENTATION OFF CACHE BOOL "Build the BUILD_DOCUMENTATION of RTTR")
set(BUILD_INSTALLER OFF CACHE BOOL "Build the BUILD_INSTALLER of RTTR")
set(BUILD_PACKAGE OFF CACHE BOOL "Build the PACKAGE of RTTR")
set(BUILD_STATIC ON CACHE BOOL "Build RTTR as static library")
add_subdirectory("rttr-0.9.6-src")

set_target_properties(ImGuiFileDialog PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
set_target_properties(tinyxml2 PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
set_target_properties(xmltest PROPERTIES FOLDER ${OTHER_FOLDER})
set_target_properties(pugixml-static PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
set_target_properties(rttr_core_lib PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
set_target_properties(libzmq-static PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
if(TARGET clang-format)
    set_target_properties(clang-format PROPERTIES FOLDER ${OTHER_FOLDER})
endif()
if(TARGET clang-format-check)
    set_target_properties(clang-format-check PROPERTIES FOLDER ${OTHER_FOLDER})
endif()
if(TARGET clang-format-diff)
    set_target_properties(clang-format-diff PROPERTIES FOLDER ${OTHER_FOLDER})
endif()
